fixed button spacing on form

--- a/assets/stylesheets/output/main/main.css
+++ b/assets/stylesheets/output/main/main.css
@@ -2136,8 +2136,8 @@ figure {
 		   .modalDialog .action {
 		     text-align: center; }
 		   .modalDialog .button {
-		     font-size: 1em; }
-		     @media screen and (min-width: 40em) {
+		     font-size: .6em; }
+		     @media screen and (min-width: 30em) {
 		       .modal .button {
 		         font-size: 1.1em; } }
 		   .modalDialog .close-modal {
@@ -2182,5 +2182,9 @@ figure {
 			 form ul {
 				 list-style-type: none;
 				 padding: 0;
+			 }
+			 
+			 .button_panel form button[type="submit"], form input[type="submit"] {
+				 margin-top: .5rem;
 			 }
 
